--- a/Pages/orderList.html
+++ b/Pages/orderList.html
@@ -135,9 +135,10 @@
                 <label for="status">الحالة</label>
                 <select id="status" required>
                   <option value="">اختر الحالة</option>
-                  <option value="0">قيد الانتظار</option>
                   <option value="1">مقبول</option>
                   <option value="2">مرفوض</option>
+                  <option value="3">قيد الانتظار</option>
+                  <option value="4">ملغي</option>
                 </select>
               </div>
               <div class="form-group">
