--- a/Pages/dash-Boards/generalManagerDashboard.html
+++ b/Pages/dash-Boards/generalManagerDashboard.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="../../Assets/Styles/sharedLayout.css">
     <link rel="stylesheet" href="../../Assets/Styles/dashboards.css">
     <title>General Manager Dashboard - Move Smart</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="../Assets/Images/favicon_io/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="../Assets/Images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../Assets/Images/favicon_io/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="../Assets/Images/favicon_io/apple-touch-icon.png">
+    
 </head>
 
 <body>
