Add: Adding the icon to the browser tab

--- a/Pages/dash-Boards/patrolsSupervisorDashboard.html
+++ b/Pages/dash-Boards/patrolsSupervisorDashboard.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="../../Assets/Styles/sharedLayout.css" />
     <link rel="stylesheet" href="../../Assets/Styles/dashboards.css" />
     <title>Patrols Supervisor Dashboard - Move Smart</title>
+
+    <link rel="icon" type="image/x-icon" href="../../Assets/Images/favicon_io/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../Assets/Images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../Assets/Images/favicon_io/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="../../Assets/Images/favicon_io/apple-touch-icon.png">
+   
   </head>
   <body>
     <div class="topbar">
