--- a/Pages/orderList.html
+++ b/Pages/orderList.html
@@ -7,10 +7,11 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="../Assets/Images/favicon_io/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="../Assets/Images/favicon_io/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="../Assets/Images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../Assets/Images/favicon_io/favicon-16x16.png">
-    <link rel="apple-touch-icon" href="../Assets/Images/favicon_io/apple-touch-icon.png">
-    
+    <link rel="apple-touch-icon" sizes="180x180" href="../Assets/Images/favicon_io/apple-touch-icon.png">
+    <link rel="manifest" href="../Assets/Images/favicon_io/site.webmanifest">
 
     <link rel="stylesheet" href="../../Assets/Styles/orderList.css" />
   </head>
