--- a/Pages/dash-Boards/hospitalManagerDashboard.html
+++ b/Pages/dash-Boards/hospitalManagerDashboard.html
@@ -13,6 +13,12 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Hospital Manager Dashboard - Move Smart</title>
+
+    <link rel="icon" type="image/x-icon" href="../../Assets/Images/favicon_io/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../Assets/Images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../Assets/Images/favicon_io/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="../../Assets/Images/favicon_io/apple-touch-icon.png">
+
   </head>
   <body>
     <button class="menu-toggle" id="menuToggle">
