--- a/Pages/dash-Boards/superUserDashboard.html
+++ b/Pages/dash-Boards/superUserDashboard.html
@@ -10,6 +10,12 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>SuperUser Dashboard - Move Smart</title>
+
+    <link rel="icon" type="image/x-icon" href="../../Assets/Images/favicon_io/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../Assets/Images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../Assets/Images/favicon_io/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="../../Assets/Images/favicon_io/apple-touch-icon.png">
+    
   </head>
   <body>
     <div class="topbar">
