--- a/Pages/dash-Boards/patrolsSupervisorDashboard.html
+++ b/Pages/dash-Boards/patrolsSupervisorDashboard.html
@@ -44,9 +44,9 @@
         <li onclick="changeContent('drivers')">
           <img src="../../Assets/Images/users.svg" alt="" /> السائقين
         </li>
-        <li onclick="changeContent('orders')">
+        <!-- <li onclick="changeContent('orders')">
           <img src="../../Assets/Images/document.svg" alt="" /> الطلبات
-        </li>
+        </li> -->
         <li onclick="changeContent('patrols')">
           <img src="../../Assets/Images/cars.svg" alt="" /> الدوريات
         </li>
