--- a/Pages/orderList.html
+++ b/Pages/orderList.html
@@ -169,9 +169,9 @@
                 <label for="status">الحالة</label>
                 <select id="status" required>
                   <option value="">اختر الحالة</option>
-                  <option value="1">مقبول</option>
-                  <option value="2">مرفوض</option>
-                  <option value="3">قيد الانتظار</option>
+                  <option value="1">قادمة</option>
+                  <option value="2">منتهية</option>
+                  <option value="3">قيد العمل</option>
                   <option value="4">ملغي</option>
                 </select>
               </div>
