Edit the status

--- a/Pages/orderList.html
+++ b/Pages/orderList.html
@@ -167,7 +167,7 @@
               </div>
               <div class="form-group">
                 <label for="status">الحالة</label>
-                <select id="status" required>
+                <select id="status" required disabled>
                   <option value="">اختر الحالة</option>
                   <option value="1">قادمة</option>
                   <option value="2">منتهية</option>
@@ -228,7 +228,7 @@
             <div class="form-grid">
               <div class="form-group">
                 <label for="startDate">تاريخ البداية</label>
-                <input type="date" id="startDate" required />
+                <input type="date" id="startDate" required readonly />
               </div>
               <div class="form-group">
                 <label for="startTime">وقت البداية</label>
@@ -236,7 +236,7 @@
               </div>
               <div class="form-group">
                 <label for="endDate">تاريخ النهاية</label>
-                <input type="date" id="endDate" required />
+                <input type="date" id="endDate" required readonly />
               </div>
               <div class="form-group">
                 <label for="endTime">وقت النهاية</label>
